<resources>
  <string name="app_name">Medical GPS Balancer</string>

  <string name="select_point">Seleccionar Punto</string>

  <string name="radius">Radio</string>

  <string name="calculate">Calcular</string>

  <string name="base_url">https://maps.googleapis.com/maps/api/</string>

  <string name="empty_place">Selecciona un punto en el mapa</string>

  <string name="empty_radius">Ingresa el valor del radio</string>

  <string name="progress_medical_centers">Obteniendo centros médicos…</string>

  <string name="balancing_medical_centers">Balanceando centros médicos</string>

  <string name="empty_medical_centers">No se encontraron centros médicos en la ubicación y rango proporcionados</string>

  <string name="generic_error">Oops, sucedió un error al intentar realizar la operación</string>

  <string name="name">Nombre:</string>
  <string name="id">Id:</string>
  <string name="distance_to_point">Distancia a punto:</string>
  <string name="disbalanced_measure">Medida de desbalance:</string>
  <string name="distances">Distancias:</string>
</resources>
