<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:animateLayoutChanges="true"
  android:background="@android:color/white">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      style="@style/TextAppearance.AppCompat.Small"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:text="@string/name"/>

    <TextView
      android:id="@+id/nameTextView"
      style="@style/TextAppearance.AppCompat.Large"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"/>

    <TextView
      style="@style/TextAppearance.AppCompat.Small"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:text="@string/id"/>

    <TextView
      android:id="@+id/idTextView"
      style="@style/TextAppearance.AppCompat.Medium"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"/>

    <TextView
      style="@style/TextAppearance.AppCompat.Small"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:text="@string/disbalanced_measure"/>

    <TextView
      android:id="@+id/functionResultTextView"
      style="@style/TextAppearance.AppCompat.Medium"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"/>

    <TextView
      style="@style/TextAppearance.AppCompat.Small"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:text="@string/distance_to_point"/>

    <TextView
      android:id="@+id/distanceToPointTextView"
      style="@style/TextAppearance.AppCompat.Medium"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginBottom="4dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"/>

    <TextView
      style="@style/TextAppearance.AppCompat.Small"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:text="@string/distances"/>

    <TextView
      android:id="@+id/distancesTextView"
      style="@style/TextAppearance.AppCompat.Medium"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginBottom="4dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"/>

  </LinearLayout>

</android.support.v4.widget.NestedScrollView>